<?xml version="1.0"?>
<package>
  <name>tamiya_teb_stage</name>
  <version>0.2.4</version>
  <description>The tamiya_teb_stage package</description>

  <maintainer email="takahashishotaro21@gmail.com">Takahashi Shotaro</maintainer>
  <author email="takahashishotaro21@gmail.com">Takahashi Shotaro</author>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>stage_ros</run_depend>
  <run_depend>teb_local_planner</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>amcl</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
